k8s/certs/haneluk-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: haneluk-service
spec:
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
