k8s/certs/haneluk-ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: haneluk-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: haneluk-ip-address
    networking.gke.io/managed-certificates: haneluk-cert
spec:
  backend:
    serviceName: haneluk-service
    servicePort: 80
